# fill-matrix-with-numbers

./: .hgignore
CodingDecoding/: CMakeLists.txt
CodingDecoding/src/: main.cpp
Complex/: CMakeLists.txt
Complex/include/: Complex.h
Complex/src/: Complex.cpp  main.cpp
CorrelationCode/: CMakeLists.txt
CorrelationCode/src/: main.cpp
Decoding/: CMakeLists.txt
Decoding/src/: main.cpp
Depozit/: CMakeLists.txt
Depozit/src/: main.cpp
Exceptions/: CMakeLists.txt
Exceptions/src/: main.cpp
FiilMatrixWithNumbers/: CMakeLists.txt
FiilMatrixWithNumbers/include/: SomeHeader.h
FiilMatrixWithNumbers/src/: main.cpp
Goldbah/: CMakeLists.txt
Goldbah/src/: main.cpp
GraphicRed/: CMakeLists.txt
GraphicRed/include/: Interface.h
GraphicRed/src/: Interface.cpp  main.cpp
Interview/: CMakeLists.txt
Interview/src/: main.cpp
InversionCode/: CMakeLists.txt
InversionCode/src/: main.cpp
Jan_24_CLient/: CMakeLists.txt
Jan_24_CLient/include/: BaseF.h  TestLib.h
Labyrinth/: CMakeLists.txt
Labyrinth/include/: Agent.h  Labyrinth.h  MazeRenderer.h  Trace.h  Wall.h
Labyrinth/src/: Agent.cpp  Labyrinth.cpp  MazeRenderer.cpp  Wall.cpp  main.cpp
Linked_List/: CMakeLists.txt
Linked_List/include/: Linked_List.h
Linked_List/src/: main.cpp
List/: CMakeLists.txt
List/include/: Node.h
List/src/: Node.cpp  main.cpp
MiniPrintf/: CMakeLists.txt
OctalToDecimal/: CMakeLists.txt
ProjectEulerProblem1/: CMakeLists.txt
QuadraticEquation/: CMakeLists.txt
ResourceInClass/: CMakeLists.txt
Shop/: CMakeLists.txt
Shop_Client/: CMakeLists.txt  ReadMe.txt
Shop_Lib/: CMakeLists.txt  ReadMe.txt
Shop_test/: CMakeLists.txt
Stroustrup/: CMakeLists.txt
Stroustrup5_11/: CMakeLists.txt
Stroustrup_16/: CMakeLists.txt
TestLib/: CMakeLists.txt
Ticket/: CMakeLists.txt
Ticket/src/: main.cpp
Tree/: CMakeLists.txt
TriangleProject/: CMakeLists.txt
Unkillable/: CMakeLists.txt
WinApi2/: CMakeLists.txt  ReadMe.txt
WinApi2/include/: Resource.h
WinApi2/rc/: WinApi2.rc
WinApi2/src/: WinApi2.cpp  stdafx.cpp
WinApi_Graphic/: CMakeLists.txt
WinApi_Graphic/include/: Image_Data.h  Resource.h
WinApi_Graphic/rc/: WinApi_Graphic.rc
WinApi_Graphic/src/: ImageData.cpp  WinApi_Graphic.cpp  stdafx.cpp
(+83 files in other folders)
